# rusty-monitor

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  target_server.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230103_104900_create_target_servers_table.rs  m20230103_133250_create_users_table.rs
src/: bot.rs  bot_configs.rs  bot_support.rs  commands.rs  compute.rs  configs.rs  database.rs  main.rs  models.rs  mprober_api.rs  mprober_api_resource_structs.rs  mprober_api_resources.rs  mprober_configs.rs  mprober_schemas.rs  requester.rs  resource_api.rs  resource_api_structs.rs  structs.rs  thread_channel.rs  timer.rs  traits.rs
src/bot/: data.rs  defer.rs  invocation_data.rs  load.rs  manage_target_server.rs  manage_user.rs  query_db.rs  support.rs
src/bot_support/: bot_support.rs  defer.rs  manage_user.rs
src/channel_wrap/: wrapper.rs
src/commands/: configure_user.rs  cpu.rs  help.rs  hostname.rs  memory.rs  mod.rs  monitor.rs  new_user.rs  register.rs  snapshot.rs  whatever.rs  who_am_i.rs
src/compute/: cpu.rs
src/configs/: bot_configs.rs  mod.rs  mprober_configs.rs  resource_api_configs.rs
src/database/: initialize.rs  schemas.rs  setup.rs
src/models/: target_server.rs  users.rs
src/mprober_api/: api.rs  client.rs  cpu.rs  memory.rs  mod.rs  requester.rs  schemas.rs
src/mprober_api_resource_structs/: cpu.rs  memory.rs  network.rs  rtc.rs
src/mprober_api_resources/: cpu.rs  memory.rs  shared_traits.rs  swap.rs  volume.rs
src/resource_api/: api.rs  client.rs  cpu.rs  hostname.rs  memory.rs  requester.rs  schemas.rs
src/resource_api_structs/: cpu.rs  date_time.rs  hostname.rs  memory.rs  os.rs  shared_traits.rs
src/timer/: monitors.rs  (+1 more)
(+3 files in other folders)
