[package]
name = "rusty-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["json"] }
timer = "0.2.0"
tokio = { version = "1", features = ["full"] }
