[workspace]

[package]
name = "rusty-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
dotenv = "0.15.0"
eventual = "0.1.7"
futures = "0.3.25"
parking_lot = "0.12.1"
poise ={ version = "0.5.1", default-features=true }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.150"
serde_json = "1.0.89"
serenity = { version = "0.11.5", default-features = false, features = [ "cache", "client", "gateway", "rustls_backend", "model", "voice" ] }
strum_macros = "0.24.3"
timer = "0.2.0"
tokio = { version = "1.23.0", features = ["full", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.gnomeutils]
git = "https://github.com/GnomedDev/GnomeUtils"
features = ["error_handling", "help_command", "analytics", "i18n", "bot_list", "logging", "songbird"]
